--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -9,7 +9,7 @@
 		<title>{{ site.title }}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css" />
 	</head>
 	<body class="single is-preload">
 
@@ -107,7 +107,7 @@
 										<a href="#" class="author"><span class="name">Peter</span><img src="images/avatar.jpg" alt="" /></a>
 									</div> -->
 								</header>
-								<span class="image featured"><img src="{{ site.baseurl }}/images/{{ page.image }}" alt="{{ page.imagealt }}" /></span>
+								<span class="image featured"><img src="{{ site.baseurl }}images/{{ page.image }}" alt="{{ page.imagealt }}" /></span>
 								{{ content }}
 								<footer>
 									<ul class="stats">
@@ -135,11 +135,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="{{ site.baseurl }}assets/js/jquery.min.js"></script>
+			<script src="{{ site.baseurl }}assets/js/browser.min.js"></script>
+			<script src="{{ site.baseurl }}assets/js/breakpoints.min.js"></script>
+			<script src="{{ site.baseurl }}assets/js/util.js"></script>
+			<script src="{{ site.baseurl }}assets/js/main.js"></script>
 
 	</body>
 </html>
