--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -5,12 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>{{ site.title }}</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css" />
-	</head>
+	{% include head.html %}
 	<body class="single is-preload">
 
 		<!-- Wrapper -->
