--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -12,31 +12,7 @@
 		<div id="wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1><a href="index.html">Peter's Easy Science</a></h1>
-					<nav class="links">
-						<ul>
-							<li><a href="#">Background</a></li>
-							<li><a href="#">Methods</a></li>
-							<li><a href="#">In Progress</a></li>
-							<li><a href="#">Completed</a></li>
-							<!-- <li><a href="#">Adipiscing</a></li> -->
-						</ul>
-					</nav>
-					<nav class="main">
-						<ul>
-							<li class="search">
-								<a class="fa-search" href="#search">Search</a>
-								<form id="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</li>
-							<li class="menu">
-								<a class="fa-bars" href="#menu">Menu</a>
-							</li>
-						</ul>
-					</nav>
-				</header>
+				{% include navbar.html %}
 
 			<!-- Menu -->
 				<section id="menu">
