--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -19,11 +19,14 @@
 
                         <!-- Links -->
 
-                            <ul class="actions">
-								{% for item in site.data.navigation.docs %}
-									<li><a href="{{ item.url }}">{{ item.title }}</a></li>
-								{% endfor %}
-							</ul>
+						{% for item in site.data.samplelist.toc %}
+						<h3><a href = "{{ item.url }}">{{ item.title}}</a></h3>
+						  <ul>
+							{% for entry in item.subfolderitems %}
+							  <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+							{% endfor %}
+						  </ul>
+					  {% endfor %}
 
                     </div>
         </div>
