--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -19,7 +19,7 @@
 
                         <!-- Links -->
 
-						{% for item in site.data.samplelist.toc %}
+						{% for item in site.data.navigation.docs %}
 						<h3><a href = "{{ item.url }}">{{ item.title}}</a></h3>
 						  <ul>
 							{% for entry in item.subfolderitems %}
