--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -131,3 +131,8 @@
         </section>
 
 </section>
+<script src="{{ site.baseurl }}assets/js/jquery.min.js"></script>
+<script src="{{ site.baseurl }}assets/js/browser.min.js"></script>
+<script src="{{ site.baseurl }}assets/js/breakpoints.min.js"></script>
+<script src="{{ site.baseurl }}assets/js/util.js"></script>
+<script src="{{ site.baseurl }}assets/js/main.js"></script>
