--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -20,7 +20,7 @@
                         <!-- Links -->
 
 						{% for item in site.data.navigation.{{ page.name }} %}
-						<h3><a href = "{{ item.url }}">{{ item.title }}</a></h3>
+						<h3>{{ item.title }}</h3>
 						  <ul>
 							{% for entry in item.subfolderitems %}
 							  <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
