--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -33,7 +33,7 @@
 								{{ content }}
 								<footer>
 									<ul class="stats">
-										<li><a href="#">In Progress</a></li>
+										<li><a href="{{ site.baseurl }}{{ page.folderurl }}">{{ page.folder }}</a></li>
 										<li><a href="#" class="icon solid fa-heart">28</a></li>
 										<li><a href="#" class="icon solid fa-comment">128</a></li>
 									</ul>
