--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -18,6 +18,26 @@
 					<div id="main">
 
                         <!-- Links -->
+						
+							{% for item in site.data.navigation.navi[page.sidebar] %}
+							<h3>{{ item.title }}</h3>
+								{% if item.subfolderitems[0] %}
+								<ul>
+									{% for entry in item.subfolderitems %}
+							  			<li>{{ entry.page }}</li>
+											{% if entry.subsubfolderitems[0] %}
+											<ul>
+												{% for subster in entry.subsubfolderitems %}
+													<li><a href="{{ subster.url }}">{{ subster.page }}</a></li>
+												{% endfor %}
+											</ul>
+											{% endif %}
+									{% endfor %}
+								</ul>
+								{% endif %}
+							{% endfor %}
+						</ul>
+
 
 						{% for item in site.data.navigation.{{ page.name }} %}
 						<h3>{{ item.title }}</h3>
