--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
 
         {% for item in site.data.navigation.navi %}
         <div class="dropdown">
-            <button class="dropbtn"><a href="">{{ item.title }}</a></button>
+            <button class="dropbtn"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></button>
             <div class="dropdown-content">
                 {% for entry in item.subfolderitems %}
                 <a href="{{ entry.url }}">{{ entry.page }}</a>
