--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -24,11 +24,11 @@
 								{% if item.subfolderitems[0] %}
 								<ul>
 									{% for entry in item.subfolderitems %}
-							  			<li>{{ entry.page }}</li>
+							  			<li><a href=""{{ entry.page }}</li>
 											{% if entry.subsubfolderitems[0] %}
 											<ul>
 												{% for subster in entry.subsubfolderitems %}
-													<li><a href="{{ subster.url }}">{{ subster.page }}</a></li>
+													<li><a href="{{ site.baseurl }}{{ subster.url }}">{{ subster.page }}</a></li>
 												{% endfor %}
 											</ul>
 											{% endif %}
