--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
             <button class="dropbtn"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></button>
             <div class="dropdown-content">
                 {% for entry in item.subfolderitems %}
-                <a href="{{ entry.url }}">{{ entry.page }}</a>
+                <a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.page }}</a>
                 <br />
                 {% endfor %}
             </div>
