--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -24,7 +24,7 @@
 								{% if item.subfolderitems[0] %}
 								<ul>
 									{% for entry in item.subfolderitems %}
-							  			<li><a href=""{{ entry.page }}</li>
+							  			<li><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.page }}</a></li>
 											{% if entry.subsubfolderitems[0] %}
 											<ul>
 												{% for subster in entry.subsubfolderitems %}
