--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -37,7 +37,7 @@
 								{% endif %}
 							{% endfor %}
 						
-
+							<p> Something </p>
 <!--
 						{% for item in site.data.navigation.{{ page.name }} %}
 						<h3>{{ item.title }}</h3>
