--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -16,28 +16,28 @@
 
 				<!-- Main -->
 					<div id="main">
-
+						<p> some text</p>
                         <!-- Links -->
 						
-							{% for item in site.data.navigation.navi[page.sidebar] %}
-							<h3>{{ item.title }}</h3>
-								{% if item.subfolderitems[0] %}
-								<ul>
-									{% for entry in item.subfolderitems %}
-							  			<li><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.page }}</a></li>
-											{% if entry.subsubfolderitems[0] %}
-											<ul>
-												{% for subster in entry.subsubfolderitems %}
-													<li><a href="{{ site.baseurl }}{{ subster.url }}">{{ subster.page }}</a></li>
-												{% endfor %}
-											</ul>
-											{% endif %}
-									{% endfor %}
-								</ul>
-								{% endif %}
-							{% endfor %}
-						
-							<p> Something </p>
+						{% for item in site.data.navigation.navi[page.sidebar] %}
+						<h3>{{ item.title }}</h3>
+							{% if item.subfolderitems[0] %}
+							<ul>
+								{% for entry in item.subfolderitems %}
+									<li><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.page }}</a></li>
+										{% if entry.subsubfolderitems[0] %}
+										<ul>
+											{% for subster in entry.subsubfolderitems %}
+												<li><a href="{{ site.baseurl }}{{ subster.url }}">{{ subster.page }}</a></li>
+											{% endfor %}
+										</ul>
+										{% endif %}
+								{% endfor %}
+							</ul>
+							{% endif %}
+						{% endfor %}
+					
+						<p> Something </p>
 <!--
 						{% for item in site.data.navigation.{{ page.name }} %}
 						<h3>{{ item.title }}</h3>
