--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,72 +14,7 @@
         </div>
         {% endfor %}
 
-        <!--
-        <div class="dropdown">
-            <button class="dropbtn"><a href="{{ site.baseurl }}background/background.html">Background</a></button>
-            <div class="dropdown-content">
-                <a href="{{ site.baseurl }}background/theatmosphere.html">The Atmosphere</a>
-                <br />
-                <a href="{{ site.baseurl }}background/airglow">Airglow</a>
-                <br />
-                <a href="{{ site.baseurl }}background/gravitywaves.html">Gravity Waves</a>
-                <br />
-                <a href="#">Clouds</a>
-                <br />
-            </div>		
-        </div>
-    
-        <div class="dropdown">
-            <button class="dropbtn">Methods</button>
-            <div class="dropdown-content">
-            <a href="{{ site.baseurl }}#">Fourier Transform</a>
-            <br />
-            <a href="{{ site.baseurl }}#">S-Transform</a>
-            <br />
-            <a href="{{ site.baseurl }}#">Binning</a>
-            <br />
-            <a href="{{ site.baseurl }}#">Image Analysis</a>
-            <br />
-            </div>
-        </div>
-
-        <div class="dropdown">
-            <button class="dropbtn">Instruments</button>
-            <div class="dropdown-content">
-            <a href="{{ site.baseurl }}#">Aqua-AIRS</a>
-            <br />
-            <a href="{{ site.baseurl }}#">Airglow Imagers</a>
-            <br />
-            <a href="{{ site.baseurl }}#">Link 3</a>
-            <br />
-            </div>
-        </div>
-    
-        <div class="dropdown">
-            <button class="dropbtn">In Progress</button>
-            <div class="dropdown-content">
-            <a href="{{ site.baseurl }}#">AIRS Mask</a>
-            <br />
-            <a href="{{ site.baseurl }}#">Airglow Mask</a>
-            <br />
-            <a href="{{ site.baseurl }}#">Link 3</a>
-            <br />
-            </div>
-        </div>
-    
-        <div class="dropdown">
-            <button class="dropbtn">Completed</button>
-            <div class="dropdown-content">
-            <a href="{{ site.baseurl }}#">N/A</a>
-            <br />
-            <a href="{{ site.baseurl }}#">N/A</a>
-            <br />
-            <a href="{{ site.baseurl }}#">N/A</a>
-            <br />
-            </div>
-        </div>
-            
-             <li><a href="#">Adipiscing</a></li> -->
+    </nav>  
         
     <nav class="main">
         <ul>
