--- a/_layouts/topcontents.html
+++ b/_layouts/topcontents.html
@@ -20,20 +20,22 @@
                         <!-- Links -->
 						
 						{% for item in site.data.navigation.navi %}
-						<h3>{{ item.title }}</h3>
-							{% if item.subfolderitems[0] %}
-							<ul>
-								{% for entry in item.subfolderitems %}
-									<li><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.page }}</a></li>
-										{% if entry.subsubfolderitems[0] %}
-										<ul>
-											{% for subster in entry.subsubfolderitems %}
-												<li><a href="{{ site.baseurl }}{{ subster.url }}">{{ subster.page }}</a></li>
-											{% endfor %}
-										</ul>
-										{% endif %}
-								{% endfor %}
-							</ul>
+							{% if item.title == page.sidebar %}
+							<h3>{{ item.title }}</h3>
+								{% if item.subfolderitems[0] %}
+								<ul>
+									{% for entry in item.subfolderitems %}
+										<li><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.page }}</a></li>
+											{% if entry.subsubfolderitems[0] %}
+											<ul>
+												{% for subster in entry.subsubfolderitems %}
+													<li><a href="{{ site.baseurl }}{{ subster.url }}">{{ subster.page }}</a></li>
+												{% endfor %}
+											</ul>
+											{% endif %}
+									{% endfor %}
+								</ul>
+								{% endif %}
 							{% endif %}
 						{% endfor %}
 					
