--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -6,6 +6,18 @@
 -->
 <html>
 {% include head.html %}
+<style>
+    .grid-container {
+	display: grid;
+  }
+  .grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+</style>
 	<body class="single is-preload">
 
 		<!-- Wrapper -->
