--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,11 +9,12 @@
 <style>
     .grid-container {
 	display: grid;
+    grid-template-columns: auto
   }
   .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
+  padding: 10px;
   font-size: 30px;
   text-align: center;
 }
