--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,14 +9,13 @@
 <style>
     .grid-container {
 	display: grid;
-    grid-template-columns: auto
+    grid-template-columns: max-content
   }
   .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 10px;
-  font-size: 30px;
-  text-align: center;
+  text-align: left;
 }
 </style>
 	<body class="single is-preload">
