--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,8 +9,10 @@
 <style>
     .grid-container {
 	display: grid;
-    grid-template-columns: max-content
+    grid-template-columns: max-content auto auto;
+    grid-auto-flow: column;
   }
+  .item3 {grid-column: auto / span 2;}
   .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
@@ -32,7 +34,7 @@
                         <!-- Links -->
                         {% for item in site.data.navigation.navi %}
                             {% if item.title == page.sidebar %}
-                            <h3>{{ item.title }}</h3>
+                            <h2>{{ item.title }}</h2>
                                 {% if item.subfolderitems[0] %}
                                     <div class="grid-container">
                                     {% for entry in item.subfolderitems %}
@@ -50,17 +52,9 @@
                                 {% endif %}
                             {% endif %}
                         {% endfor %}
-
-                        <article class="post">
-                            <header>
-                                <div class="title">
-                                    <h2><a href="#">{{ page.title }}</a></h2>
-                                    <p>{{ page.subtitle }}</p>
-                                </div>
-                            </header>
+                        <div class="item3">
                             <span class="image featured"><img src="{{ site.baseurl }}images/{{ page.image }}" alt="{{ page.imagealt }}" /></span>
-                            {{ content }}
-                        </article>
+                        </div>
                     </div>
         </div>
                 
