--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -12,7 +12,7 @@
     grid-template-columns: max-content auto auto;
     grid-auto-flow: column;
   }
-  .item3 {grid-column: auto / span 2;}
+  .item3 {grid-row: auto / span 2;}
   .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
