--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,10 +9,14 @@
 <style>
     .grid-container {
 	display: grid;
-    grid-template-columns: max-content auto auto;
+    grid-template-columns: max-content;
     grid-auto-flow: column;
+    float: left;
+    margin: 20px;
   }
-  .item3 {grid-row: auto / span 2;}
+  .item3 {
+    float: right;
+}
   .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
