--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -15,7 +15,8 @@
     margin: 20px;
   }
   .item3 {
-    float: right;
+    max-width: 100%;
+    float: left;
 }
   .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
